# iram

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  Makefile  arnoldi.c  file_test.c  iram.c  kernel.c  miram.c  qr.c  ra.c  test.c  tools.c
src/include/: arnoldi.h  iram.h  kernel.h  miram.h  qr.h  ra.h  tools.h
